fixed navbar css so it collapses at medium breakpoint. testing less saturated blue color on companies page

--- a/src/CompanyList.css
+++ b/src/CompanyList.css
@@ -1,5 +1,5 @@
 .CompanyList {
-    background-color: rgb(135, 219, 255);
+    background-color: rgb(165, 214, 235);
 }
 h1 {
     font-family: 'Rubik', sans-serif;
